--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "new-component": "node configs/scripts/new-component",
     "del-component": "node configs/scripts/del-component",
     "storybook": "start-storybook --config-dir configs/.storybook",
+    "styleguidist:server": "styleguidist server",
+    "styleguidist:build": "styleguidist build",
     "setup": "node configs/scripts/setup/setup.js",
     "internal:test": "jest --config ./configs/jest.internal.config.js --forceExit",
     "internal:test:open": "opener ./configs/coverage/index.html",
@@ -58,6 +60,8 @@
     "@loadable/babel-plugin": "^5.8.0",
     "@loadable/webpack-plugin": "^5.7.1",
     "@storybook/react": "^5.0.11",
+    "acorn": "^6.2.1",
+    "acorn-jsx": "^5.0.1",
     "autoprefixer": "^9.5.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.8.0",
@@ -86,6 +90,7 @@
     "opn": "^5.5.0",
     "optimize-css-assets-webpack-plugin": "^4.0.3",
     "postcss-loader": "^2.1.6",
+    "react-styleguidist": "^9.1.13",
     "react-test-renderer": "^16.8.6",
     "rimraf": "^2.6.3",
     "style-loader": "^0.23.1",
