--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
 
       - run:
           name: Run ESLint
-          command: yarn eslint
+          command: yarn lint
       - run:
           name: Run Tests
           command: yarn test:client
