update Badge learning ideal from duy

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "configFile": "./configs/.eslintrc.js",
         "ignorePath": "./configs/.eslintignore"
     },
-    "todo-tree.rootFolder": "${workspaceFolder}/src"
+    "todo-tree.rootFolder": "${workspaceFolder}/src",
+    "prettier.useTabs": false
 }
