--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "rimraf": "^2.6.3",
     "style-loader": "^0.23.1",
     "supertest": "^4.0.2",
+    "surge": "^0.21.3",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "webpack": "^4.29.6",
     "webpack-bundle-analyzer": "^3.1.0",
