Fix regex in filtering branchs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,4 +60,4 @@ workflows:
             - build
           filters:
             branches:
-              only: /*-final/
+              only: /.+-final/
