--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,7 +55,7 @@ workflows:
   version: 2
   build_and_deploy:
     jobs:
-      - build
+      - build:
           filters:
             branches:
               ignore: master
