--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,21 +33,31 @@ jobs:
       - run:
           name: Run Tests
           command: yarn test:client
-      - run:
-          name: Build Styleguidist
-          command: yarn styleguidist:build
   deploy:
     docker:
       - image: circleci/node:8
 
     steps:
       - checkout
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package.json" }}
+            - v1-dependencies-
+      - run: yarn install
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
       - run:
           name: Install Surge globally
           command: sudo npm install -g surge
       - run:
+          name: Build Styleguidist
+          command: yarn styleguidist:build
+      - run:
           name: Deploy to Surge
           command: |
+            ls
             echo "Deploying to rezo-${CIRCLE_BRANCH/_/}.surge.sh"
             surge --project ./styleguide --domain rezo-$(echo "${CIRCLE_BRANCH/_/}").surge.sh
 
