--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,8 @@ jobs:
           command: yarn styleguidist:build
       - persist_to_workspace:
           root: styleguide
-          paths: *
+          paths:
+            - *
   deploy:
     docker:
       - image: circleci/node:8
