Revert "Merge branch 'hoa_d-final' into master"
This reverts commit afdb7c7cb7b6bca6dbe63f7f6a4c28a7050d61df, reversing
changes made to 5726e10c5d2637ef7d45673e907a84f6241c6f7a.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,5 @@
         "configFile": "./configs/.eslintrc.js",
         "ignorePath": "./configs/.eslintignore"
     },
-    "todo-tree.rootFolder": "${workspaceFolder}/src",
-    "prettier.useTabs": false
+    "todo-tree.rootFolder": "${workspaceFolder}/src"
 }
